change default-black color

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@
   --primary-color: #1a53ff;
   --secondary-color: #4f8cff;
   --primary-hover: #99b3ff;
-  --default-black: #0e0d0de0;
+  --default-black: #262626;
   --default-gray: #1e2939;
   --light-gray: #6a7282;
 }
